# bluez

./: .gitignore  Makefile.am  Makefile.plugins  Makefile.tools  configure.ac
doc/: Makefile.am  adapter-api.xml  agent-api.xml  arc-api.xml  device-api.xml  foot.xml  gatt-api.xml  head.xml  media-api.xml  network-api.xml  profile-api.xml
profiles/arc/: NEWS  README.org  arc-proxy.c  arc-server.c  arc.c  arc.h
profiles/aui/: .gitignore  README.md  ad_types.h  aui-advertise.c  aui-advertise.h  aui.c  aui.h  hci_ext.c  hci_ext.h  set-aui-adv.c
src/: attrib-server.c
